--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-# Generic .gitignore files
-
-# these files are created when we open a folder in macOS
-**/.DS_STORE
-
-# the tmp directory is a frequent place to put ignorable files
-**/tmp/
+# OS
+.DS_Store
